# CausalAnnotationCorrection

./: .gitignore  Dockerfile  Makefile  README.md  README_backup.md  usage.md
annotation-checker/: MANIFEST.in  Makefile  Pipfile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
annotation-checker/src/acheck/: __main__.py  checkers.py  constants.py  server.py
annotation-checker/src/acheck.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
annotation-checker/src/acheck/checking/: error.py  fixing.py
annotation-checker/src/acheck/checks/: file.py  objects.py  signature.py  spelling.py  structure.py  validating.py
annotation-checker/src/acheck/config/: config.py  config.toml
annotation-checker/src/acheck/utils/: annotationhelper.py  filehelper.py  loghelper.py  typecheck.py
annotation-checker/src/docs/: acheck.checks.rst  acheck.rst  conf.py  development.rst  example.rst  index.rst  installation.rst  usage.rst
annotation-checker/src/docs/_build/doctrees/: acheck.checking.doctree  acheck.checks.doctree  acheck.doctree  development.doctree  environment.pickle  (+5 more)
annotation-checker/src/resources/: editor.css  editor.js
annotation-checker/src/resources/ace/: mode-pddl.js
annotation-checker/tests/: conftest.py  test_annotation_tools.py  test_file.py  test_plan_structure.py  test_spelling.py
annotation-checker/tests/test_files/: annotation_isfloat.csv  annotation_noasc.csv  annotation_noexpr.csv  annotation_noint.csv  annotation_symbols.csv  example.csv  multi_delimiter.csv  pwl.txt  wrong_spelling.csv
(+50 files in other folders)
